2008-01-11  Christian Kellner  <gicmo@gnome.org>

	* client/gdaemonvfs.c:
	Fix the double use of a counter variable inside nested loops.

	* client/Makefile.am:
	* client/httpuri.c:
	UriMapper added, which is needed for plain http method.
	
	* configure.ac:
	Check for libsoup version >= 2.2.104

	* daemon/gvfsbackendhttp.c:
	Initial implementation of plain http methods.

	* daemon/Makefile.am:
	* daemon/http.mount.in:
	Added.

	* daemon/soup-input-stream.c:
	* daemon/soup-input-stream.h:
	Import of Dan Winship's libsoup based streaming classes.

2008-01-11  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* configure.ac: Added "eu" (Basque) to ALL_LINGUAS.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendcomputer.c:
	Set can't write info on the root.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

	* programs/gvfs-mount.c (list_volumes):
	Fix crash if no mount in volume.

2008-01-11  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * common/gvfsdaemonprotocol.h:
	Implement unmount_mountable and eject_mountable
	on client side.
	
        * common/gmountoperationdbus.c:
	Fix warnings
	
        * daemon/gvfsbackend.[ch]:
        * daemon/gvfsjobunmountmountable.[ch]:
	Add unmount_mountable and eject_mountable in daemon.
	
        * daemon/gvfsbackendcomputer.c:
	Implement unmount_mountable and eject_mountable

        * daemon/gvfsbackendlocaltest.c:
	Update to latest API
	
        * daemon/gvfsbackendsftp.c:
	Fix indentation
	
        * daemon/gvfsjobunmount.c:
	Always allow unmount if unmount is not
	implemented.

2008-01-11  Christian Kellner  <gicmo@gnome.org>

	* configure.ac:
	* daemon/Makefile.am:
	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	Initial attempt of writing the http backend. Not much
	there yet only a stub.

2008-01-10  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackend.h:
        * daemon/gvfsmonitor.[ch]:
        * daemon/gvfsbackendcomputer.c: